test/cli/test-context-configmap-ngpol/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: NamespacedGeneratingPolicy
metadata:
  name: generate-env-config
  namespace: test-namespace
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE"]
      resources: ["deployments"]
  variables:
    - name: generatedConfig
      expression: >-
        [
          {
            "kind": dyn("ConfigMap"),
            "apiVersion": dyn("v1"),
            "metadata": dyn({
              "name": "generated-config",
            }),
            "data": dyn({
              "environment": "production"
            })
          }
        ]
  generate:
    - expression: generator.apply(variables.generatedConfig)
